Closed Bug 1474898 Opened 6 years ago Closed 6 years ago

Crash in mozilla::dom::ServiceWorkerImpl::ServiceWorkerImpl

Categories

(Core :: DOM: Service Workers, defect)

Unspecified
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox61 --- unaffected
firefox62 --- unaffected
firefox63 --- fixed

People

(Reporter: calixte, Assigned: mrbkap)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is
report bp-38b70980-264d-47e3-9b78-81b570180711.
=============================================================

Top 10 frames of crashing thread:

0 libxul.so mozilla::dom::ServiceWorkerImpl::ServiceWorkerImpl dom/serviceworkers/ServiceWorkerImpl.cpp:85
1 libxul.so mozilla::dom::ServiceWorker::Create dom/serviceworkers/ServiceWorker.cpp:67
2 libxul.so nsGlobalWindowInner::GetOrCreateServiceWorker dom/base/nsGlobalWindowInner.cpp:6422
3 libxul.so mozilla::dom::ServiceWorkerContainer::ServiceWorkerContainer dom/serviceworkers/ServiceWorkerContainer.cpp:93
4 libxul.so mozilla::dom::ServiceWorkerContainer::Create dom/serviceworkers/ServiceWorkerContainer.cpp:81
5 libxul.so mozilla::dom::Navigator::ServiceWorker dom/base/Navigator.cpp:1461
6 libxul.so mozilla::dom::Navigator_Binding::get_serviceWorker dom/bindings/NavigatorBinding.cpp:1600
7 libxul.so bool mozilla::dom::binding_detail::GenericGetter<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3182
8 libxul.so js::CallGetter 
9 libxul.so js::NativeGetProperty 

=============================================================

There is 1 crash in nightly 63 with buildid 20180711100118. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1459209.

[1] https://hg.mozilla.org/mozilla-central/rev?node=a5c3aa4b30f9
Flags: needinfo?(mrbkap)
This is the same as bug 1474825.  The crash is due to a typo I made here:

https://hg.mozilla.org/mozilla-central/annotate/aff060ad3204234adae2d59b3776207c6687ebfc/dom/serviceworkers/ServiceWorker.cpp#l65

The should be ensuring that info is non-nullptr instead of checking reg again.
Assignee: nobody → mrbkap
Flags: needinfo?(mrbkap)
I probably should have caught this in review.
Comment on attachment 8991394 [details]
Bug 1474898 - Fix typo in null-check. r=asuth

Andrew Sutherland [:asuth] has approved the revision.

https://phabricator.services.mozilla.com/D2078
Attachment #8991394 - Flags: review+
https://hg.mozilla.org/mozilla-central/rev/7ef930709d66
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: