Bug 1474898 - Fix typo in null-check. r=asuth

I probably should have caught this in review.

Differential Revision: https://phabricator.services.mozilla.com/D2078